# go_api/domain/entities/todo_gen.go
@@ -1,7 +1,7 @@
-// Package main provides primitives to interact with the openapi HTTP API.
+// Package entities provides primitives to interact with the openapi HTTP API.
 //
 // Code generated by github.com/deepmap/oapi-codegen version v1.12.4 DO NOT EDIT.
-package main
+package entities
 
 // Error エラーオブジェクトの共通スキーマ
 type Error struct {
@@ -50,6 +50,9 @@ type UpdateTodoIdJSONBody struct {
 	AssiginPerson string  `json:"assigin_person"`
 	Description   *string `json:"description,omitempty"`
 
+	// IsComplete Todoの完了・未完了を示すフラグ（trueが完了）
+	IsComplete bool `json:"is_complete"`
+
 	// Title Todoのタイトル
 	Title string `json:"title"`
 }
@@ -58,9 +61,6 @@ type UpdateTodoIdJSONBody struct {
 type GetTodosParams struct {
 	// Offset 結果セットの収集を開始する前にスキップするアイテムの数
 	Offset int `form:"offset" json:"offset"`
-
-	// Limit 返却するアイテムの数
-	Limit int `form:"limit" json:"limit"`
 }
 
 // PostTodoJSONRequestBody defines body for PostTodo for application/json ContentType.
